--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>hola</h1>
-    <p>holaaaa</p>
+    <div id="container">    
+        <div id="post">
+            <h1>este es un titulo</h1>
+            <p>y este es el parrafo de inicio</p>
+        </div>
+
+    </div>
 </body>
 </html>
