--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <div id="container">    
+    <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
+
         <div id="post">
             <h1>este es un titulo</h1>
             <p>y este es el parrafo de inicio</p>
