--- a/blogpost.html
+++ b/blogpost.html
@@ -10,13 +10,14 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera 2222
+            cabecera 2222 tu blog maestro
         </div>
 
         <div id="post">
             <h1>este es un titulo</h1>
             <p>y este es el parrafo de inicio</p>
         </div>
+        <p>gg<</p>
 
     </div>
 </body>
