--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bienvenidos a prueba</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div id="post">
             <h1>este es un titulo</h1>
             <p>y este es el parrafo de inicio</p>
-        </div>
+        </div>s
 
     </div>
 </body>
